--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,6 @@ beautifulsoup4==4.9.3
 discord.py==1.5.1
 humanfriendly==9.1
 matplotlib==3.3.1
-psycopg2==2.8.5
+psycopg2-binary
 python-dotenv==0.15.0
 psutil==5.8.0
